# origin_nover

./: pubspec.yaml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/database/: app_database.dart
lib/app/database/models/: book_content.dart  book_read_setting.dart  book_source.dart  models.dart  rule.dart
lib/app/l10n/: intl_zh.arb
lib/app/routes/: app_pages.dart  app_routes.dart
lib/app/theme/: app_theme.dart
lib/backend/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/backend/rust/api/: parse_book_source.dart
lib/pages/book_read/: logic.dart  state.dart  view.dart
lib/pages/book_source/: binding.dart  logic.dart  state.dart  view.dart
lib/pages/home/: binding.dart  logic.dart  state.dart  view.dart
lib/pages/home/source/: view.dart
lib/pages/home/widget/: bookshelf.dart  menu_screen.dart
lib/pages/setting/: binding.dart  view.dart
lib/util/dialog/: dialog_utils.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/assets/: new.json
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: mod.rs  parse_book_source.rs  simple.rs
rust/src/api/model/: book_source.rs  mod.rs
web/: manifest.json
windows/flutter/: generated_plugins.cmake
windows/runner/: main.cpp
(+1 files in other folders)
