[package]
name = "rust_lib_origin_novel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0-dev.37", features = ["chrono"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
chrono = "0.4.38"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["rt", "test-util", "macros"] }
